# project_template

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_and_activate.ps1  setup_and_activate.sh
src/: main.py  setup_env.py
src/data/: loader.py  processor.py
src/storage/: results.py
tests/: test_main.py
