[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Python Project Template"
version = "0.1.0"
description = "A template for Python Projects designed to be quick to set up and easy to ensure compatibility"
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",
    "pandas",
    "structlog",
    "pytest"
]

[project.scripts]
optimize = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pylint]
max-line-length = 120

[tool.hatch.build]
packages = ["src"]